--- a/index.html
+++ b/index.html
@@ -163,27 +163,27 @@
     </style>
 </head>
 <body>
-    <h1>AppStore</h1>
+    <h1>2AppStore</h1>
 
     <input type="text" id="search-box" placeholder="Nach Apps suchen..." oninput="searchApps()">
 
     <div class="app-store">
-        <div class="app" id="app1" data-version="12.0" data-url="https://example.com/cookie-clicker">
+        <div class="app" id="app1" data-version="12.5" data-url="https://example.com/cookie-clicker">
             <img src="https://via.placeholder.com/100" alt="App 1">
             <h3>Cookie Clicker</h3>
-            <p>Version: <span id="version-app1">1.0</span></p>
+            <p>Version: <span id="version-app1">1.5</span></p>
             <button id="button-app1" onclick="downloadApp('app1', 3000, '1.0')">Herunterladen</button>
         </div>
-        <div class="app" id="app2" data-version="2.0" data-url="https://example.com/rechen-trainer">
+        <div class="app" id="app2" data-version="2.5" data-url="https://example.com/rechen-trainer">
             <img src="https://via.placeholder.com/100" alt="App 2">
             <h3>Rechen Trainer</h3>
-            <p>Version: <span id="version-app2">1.0</span></p>
+            <p>Version: <span id="version-app2">1.5</span></p>
             <button id="button-app2" onclick="downloadApp('app2', 5000, '1.0')">Herunterladen</button>
         </div>
-        <div class="app" id="app3" data-version="1.0" data-url="https://example.com/puzzle-game">
+        <div class="app" id="app3" data-version="1.5" data-url="https://example.com/puzzle-game">
             <img src="https://via.placeholder.com/100" alt="App 3">
             <h3>Puzzle Game</h3>
-            <p>Version: <span id="version-app3">1.0</span></p>
+            <p>Version: <span id="version-app3">1.5</span></p>
             <button id="button-app3" onclick="downloadApp('app3', 7000, '1.0')">Herunterladen</button>
         </div>
         
